[package]
name = "muicss-yew"
version = "0.1.0"
authors = ["AlephAlpha <alephalpha911@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
wasm-bindgen = "0.2.83"
web-sys = "0.3.60"
yew = "0.19.3"
yewtil = "0.4.0"

[workspace]
members = ["gh-pages"]
