[package]
name = "gh-pages"
version = "0.1.0"
authors = ["AlephAlpha <alephalpha911@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
log = "0.4.17"
muicss-yew = { path = "../" }
wasm-logger = "0.2"
yew = "0.19.3"
yew-feather = "0.2.1"
yew-router = "0.16.0"
yew_prism = "0.4.2"
yewtil = "0.4.0"
web-sys = {version = "0.3.60", features = ["Url"]}